test/error/parse/EndProcedureNameNotMatch.mod
MODULE EndProcedureNameNotMatch;
PROCEDURE Foo;
BEGIN
END Bar;
END EndProcedureNameNotMatch.
